jenkins-deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: jenkins
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  serviceName: jenkins
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      name: jenkins
      labels:
        app: jenkins
    spec:
      terminationGracePeriodSeconds: 10
#      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: jenkins4eval/jenkins:latest
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          resources:
            limits:
              cpu: 1
              memory: 2Gi
            requests:
              cpu: 0.5
              memory: 2Gi
          volumeMounts:
            - name: jenkins
              mountPath: /var/jenkins_home
          livenessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - curl -s localhost:8080 > /dev/null
            initialDelaySeconds: 300
            timeoutSeconds: 10
      securityContext:
        fsGroup: 1000
      volumes:
      - name: jenkins
        persistentVolumeClaim:
          claimName: jenkins-pvc
